2008-10-21  Michael Natterer  <mitch@gimp.org>

	Bug 555246 – gimp crashes when a file is opened while a preview is
	generating

	* app/widgets/gimpfiledialog.c: set dialog->progress to NULL in
	destroy() and check for progress being NULL in various places so
	we don't crash on API calls after the widget is destroyed.

2008-10-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpgegltool.c (gimp_param_spec_duplicate):
	GEGL_IS_PARAM_SPEC_PATH() became GEGL_IS_PARAM_SPEC_FILE_PATH()
	in GEGL 0.0.21.

2008-10-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpgegltool.c (gimp_gegl_tool_dialog): for the
	combo-box, strip known prefixes from the GEGL operation names and
	use icons instead.

2008-10-21  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.c (file_open_recent_cmd_callback): ref
	the GimpDisplay and GimpImageFile objects while holding a
	reference to them. Fixes a potential crash if GIMP is closed while
	the image is being loaded.

2008-10-20  Martin Nordholts  <martinn@svn.gnome.org>

	* menus/image-menu.xml.in
	* app/actions/debug-actions.c
	* app/actions/debug-commands.c: Create dump and non-dump
	groups. Also added a tooltip to the Benchmark Projection action
	and removed report of number of layers.

2008-10-20  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimperrorconsole.c (gimp_error_console_init): don't
	make the font size even smaller. We already use a smaller font in
	the dock windows.

2008-10-20  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpgradienteditor.c (view_events) (control_events):
	use pointer coordinates from the passed event instead of calling
	gtk_widget_get_pointer().

2008-10-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/bump-map.c (dialog_preview_events): use pointer
	coordinates from the passed event instead of calling
	gtk_widget_get_pointer().

2008-10-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/iwarp.c: set the OK and Reset button insensitive