@@ -1,3 +1,8 @@
+2008-10-22  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpimagefile.c
+	* app/plug-in/gimpplugin-progress.c: formatting.
+
 2008-10-21  Michael Natterer  <mitch@gimp.org>
 
 	Bug 555246 – gimp crashes when a file is opened while a preview is
